<resources>
    <string name="app_name">GroceryList</string>
    <string name="about">About</string>
    <string name="this_app_was_created_by">This app was created by:</string>
    <string name="piastopoulos">Πιαστόπουλος Ιωάννης 3977</string>
    <string name="softsis">Σόφτσης Ευάγγελος Στυλιανός 4210</string>
    <string name="skytoudis">Σκυτούδης Δημήτριος 3741</string>
    <string name="item_name">Item Name</string>
    <string name="add_new_item">Add New Item</string>
    <string name="list_name">List Name</string>
    <string name="choose_a_list_for_your_shopping">Choose a list for your shopping</string>
    <string name="you_have_not_added_any_lists_yet">You have not added any lists yet</string>
    <string name="edit_lists">Edit Lists</string>
    <string name="go_shopping">Go Shopping</string>
    <string name="edit_items">Edit Items</string>
    <string name="add_item">Add Item</string>
    <string name="delete_items">Delete Items</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="you_have_not_added_any_items_yet">You have not added any items yet</string>
    <string name="add_items">Add Items</string>
    <string name="quantity">Quantity</string>
    <string name="this_list_has_0_items">This list has 0 items</string>
    <string name="total_price">Total Price:</string>
    <string name="add_list">Add List</string>
    <string name="delete_lists">Delete Lists</string>
    <string name="lists">Lists</string>
    <string name="demo_video">Demo Video</string>
    <string name="how_to_use">How to use:</string>
    <string name="items">Items</string>
    <string name="adding_items">Adding items:</string>
    <string name="adding_items_text">Press the \'Edit Items\' button in the home page.\nThen press the \'Add Item\' button, fill in the form with the characteristics you want and hit the \'Add Item\' button.</string>
    <string name="removing_items">Removing items:</string>
    <string name="removing_items_text">Press the \'Edit Items\' button in the home page.\nCheck the boxxes of the items you want to delete and hit the \'Delete Items\' button.</string>
    <string name="editing_items">Editing items:</string>
    <string name="editing_items_text">Press the \'Edit Items\' button in the home page.\nClick on the item you want to edit, update the characteristics you want and hit the \'Edit Item\' button.</string>
    <string name="adding_lists">Adding lists:</string>
    <string name="adding_lists_text">Press the \'Edit Lists\' button in the home page.\nThen press the \'Add List\' button, type the name you want the list to have and hit the \'Add List\' button.</string>
    <string name="deleting_lists">Deleting lists:</string>
    <string name="deleting_lists_text">Press the \'Edit Lists\' button in the home page.\nCheck the boxxes of the lists you want to delete and hit the \'Delete Lists\' button.</string>
    <string name="edit_lists_">Edit lists:</string>
    <string name="edit_lists_text">Press the \'Edit Lists\' button in the home page.\nClick on the list you want to edit.</string>
    <string name="add_items_to_list">Add items to list:</string>
    <string name="add_items_to_list_text">Once you have selected the list you want to edit, press the \'Add Items\' button.\nThen select an item you want to add, or add a new one first with the \'Add New Item\' button, type in the quantity you want and hit the \'Add Item\' button.</string>
    <string name="removing_items_from_list">Removing items from list:</string>
    <string name="removing_items_from_list_text">Once you have selected the list you want to edit, check the boxxes of the items you want to delete and hit the \'Delete Items\' button.</string>
    <string name="editing_quantity_of_item_in_list">Editing quantity of item in list</string>
    <string name="editing_quantity_of_item_in_list_text">Once you have selected the list you want to edit, click on the item whose quantity you want to edit, type in the new quantity and hit the \'Save\' button.</string>
    <string name="shopping">Shopping</string>
    <string name="choosing_list">Choosing list:</string>
    <string name="choosing_list_text">Press the \'Shopping\' button in the home page.\nThen click on the list you want to buy from.</string>
    <string name="using_the_shopping_list">Using the shopping list:</string>
    <string name="using_the_shopping_list_text">Once you have chosen the list you want to shop from, you can use the + and - buttons to add and subtract to and from the quantity of the item.\nIf you have placed an item into your cart you can check the box and its price will be added to the \'Current Price\' at the bottom.</string>
    <string name="kg">Kg</string>
    <string name="piece">Piece</string>
    <string name="module">Module</string>
    <string name="itemprice">ItemPrice</string>
    <string name="itemname">ItemName</string>
    <string name="itemquantity">ItemQuantity</string>
    <string name="listname">ListName</string>
    <string name="productcount">ProductCount</string>
    <string name="home">Home</string>
    <string name="brightness">Brightness</string>
    <string name="info">Info</string>
    <string name="checkout">Checkout</string>
    <string name="current_price">Current Price:</string>
    <string name="_0">0$</string>
</resources>