<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        style="@style/MyStyle.Toolbar"
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView27"
        app:layout_constraintEnd_toStartOf="@+id/textView27"
        app:layout_constraintStart_toStartOf="@+id/buttonEditItems"
        app:layout_constraintTop_toTopOf="@+id/textView27"
        app:srcCompat="@drawable/ic_launcher" />

    <Button
        android:id="@+id/buttonEditItems"
        style="@style/MyStyle.Button"
        android:layout_width="276dp"
        android:layout_height="92dp"
        android:layout_marginTop="50dp"
        android:onClick="clickEditItems"
        android:text="@string/edit_items"
        android:textColorLink="@color/m3_highlighted_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:icon="@drawable/ic_items"
        app:iconGravity="textEnd"
        app:iconSize="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/buttonEditLists"
        style="@style/MyStyle.Button"
        android:layout_width="276dp"
        android:layout_height="92dp"
        android:onClick="clickEditList"
        android:text="@string/edit_lists"
        android:textSize="24sp"
        android:textStyle="bold"
        app:icon="@drawable/ic_list"
        app:iconGravity="textEnd"
        app:iconSize="50dp"
        app:layout_constraintBottom_toTopOf="@+id/shoppingButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEditItems"
        app:layout_constraintVertical_bias="0.502" />

    <Button
        android:id="@+id/shoppingButton"
        style="@style/MyStyle.Button"
        android:layout_width="276dp"
        android:layout_height="92dp"
        android:layout_marginBottom="75dp"
        android:onClick="clickShoppingButton"
        android:text="@string/go_shopping"
        android:textSize="24sp"
        android:textStyle="bold"
        app:icon="@drawable/ic_items"
        app:iconGravity="textEnd"
        app:iconSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="75dp"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/buttonEditItems"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/appBar" />

</androidx.constraintlayout.widget.ConstraintLayout>